--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //Dots for VP
-    implementation 'com.afollestad:viewpagerdots:1.0.0'
+    implementation "com.android.support:design:28.0.0"
+
 }
