--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.60'
+    ext.kotlin_version = '1.3.41'
+    ext.lifecycle_version = '1.1.1'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2_version = '2.16'
+    ext.android_support_version = '28.0.0-alpha3'
+    ext.rxjava2_version = '2.2.10'
+    ext.rxjava2_rxandroid = '2.0.2'
     repositories {
         google()
         jcenter()
