--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,6 @@ dependencies {
 
     implementation "com.android.support:design:28.0.0"
 
-    // RecyclerView
-    implementation "com.android.support:recyclerview-v7:$android_support_version"
-
     // LiveData & ViewModel
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
@@ -58,5 +55,6 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_rxandroid"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.1.0'
 
 }
