--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".ui.tutorial.TutorialActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.menu.MenuActivity" />
+        <activity android:name=".ui.game.GameActivity"/>
     </application>
 
 </manifest>
