--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_rxandroid"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.1.0'
 
+    //HttpLoggingInterceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:4.3.1")
 }
