--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.records.RecordsActivity"></activity>
-        <activity android:name=".ui.splash.SplashActivity">
+        <activity android:name=".ui.records.RecordsActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.splash.SplashActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.tutorial.TutorialActivity" />
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.menu.MenuActivity" />
-        <activity android:name=".ui.game.GameActivity" />
+        <activity android:name=".ui.tutorial.TutorialActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.login.LoginActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.menu.MenuActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.game.GameActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
