--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     ext.android_support_version = '28.0.0-alpha3'
     ext.rxjava2_version = '2.2.10'
     ext.rxjava2_rxandroid = '2.0.2'
+    ext.nav_version = '2.2.1'
     repositories {
         google()
         jcenter()
